# JadeMusic

./: .gitignore  Cargo.toml  nohup.out
.cargo/: config.toml
src/: commands.rs  events.rs  main.rs
src/commands/: chat.rs  mod.rs  music.rs  notify.rs  record.rs
src/services/: music.rs
