[package]
name = "nico"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"

serenity = "0.12.5"
poise = "0.6.1"
songbird = { version = "0.5.0", features = ["receive", "builtin-queue"] }
reqwest = { version = "0.12", features = ["stream"] }

ollama-rs = "0.3.4"
