[package]
name = "nico"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
poise = { version = "0.6.1", default-features = false, features = [
    "cache",
] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
    "cache",
] }
dotenv = "0.15.0"
songbird = { git = "https://github.com/beerpsi-forks/songbird", branch = "davey", features = [
    "builtin-queue",
    "rustls",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
symphonia = { version = "0.5", features = [
    "aac",
    "mp3",
    "isomp4",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
